--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,4 @@
-advanced-css-course-master/
-advanced-css-course-master.zip
-front-end/
 front-end/build
 front-end/node_modules/
 server/node_modules/
+.DS_Store
