--- a/front-end/package.json
+++ b/front-end/package.json
@@ -13,6 +13,8 @@
     "clsx": "^1.1.0",
     "dotenv": "^8.2.0",
     "file-saver": "^2.0.2",
+    "html2canvas": "^1.0.0-rc.7",
+    "jspdf": "^2.3.0",
     "material-ui": "^0.20.2",
     "node-sass": "^4.13.0",
     "query-string": "^6.12.0",
