--- a/front-end/package.json
+++ b/front-end/package.json
@@ -4,13 +4,13 @@
   "homepage": ".",
   "private": true,
   "dependencies": {
-    "@date-io/date-fns": "^2.4.0",
     "@material-ui/core": "^4.9.5",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.45",
     "@material-ui/pickers": "^3.2.10",
     "axios": "^0.19.2",
     "clsx": "^1.1.0",
+    "date-fns": "^2.17.0",
     "dotenv": "^8.2.0",
     "file-saver": "^2.0.2",
     "html2canvas": "^1.0.0-rc.7",
@@ -20,6 +20,7 @@
     "node-sass": "^4.13.0",
     "query-string": "^6.12.0",
     "react": "^16.12.0",
+    "react-datepicker": "^3.4.1",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
