--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.1",
     "fs": "^0.0.1-security",
     "helmet": "^3.21.3",
     "html-pdf": "^2.2.0",
