--- a/front-end/package.json
+++ b/front-end/package.json
@@ -8,6 +8,9 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.45",
     "@material-ui/pickers": "^3.2.10",
+    "@rpldy/upload-button": "^0.10.0",
+    "@rpldy/upload-preview": "^0.10.0",
+    "@rpldy/uploady": "^0.10.0",
     "axios": "^0.19.2",
     "clsx": "^1.1.0",
     "date-fns": "^2.17.0",
