--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "helmet": "^3.21.3",
     "html-pdf": "^2.2.0",
     "html5-to-pdf": "^3.2.0",
+    "image-to-base64": "^2.1.1",
     "joi": "^14.3.1",
     "path": "^0.12.7",
     "pg": "^7.18.2",
