--- a/front-end/package.json
+++ b/front-end/package.json
@@ -13,6 +13,7 @@
     "@rpldy/uploady": "^0.10.0",
     "axios": "^0.19.2",
     "clsx": "^1.1.0",
+    "conversor-numero-a-letras-es-ar": "^1.0.3",
     "date-fns": "^2.17.0",
     "dotenv": "^8.2.0",
     "file-saver": "^2.0.2",
