--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "NODE_ENV=development nodemon src/app.js ",
+    "testprod": "NODE_ENV=production nodemon src/app.js ",
     "start": "node app.js",
     "debug": "node --nolazy --inspect-brk=19001 app.js",
     "deploy": "rsync  -rave --progress -e \"ssh -i \"~/Documents/alan/gvatours/gvatours.pem\"\" --exclude-from \"exclude-list.txt\" -r ./* ec2-user@52.7.16.247:/opt/gva-service",
