--- a/front-end/package.json
+++ b/front-end/package.json
@@ -21,7 +21,6 @@
     "jspdf": "^2.3.0",
     "material-ui": "^0.20.2",
     "moment": "^2.29.1",
-    "node-sass": "^4.13.0",
     "query-string": "^6.12.0",
     "react": "^16.12.0",
     "react-datepicker": "^3.4.1",
@@ -37,7 +36,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "deploys": "ENVIRONMENT=production react-scripts build && cp .htaccess-needed-host ./build/.htaccess && scp  -i \"~/Documents/alan/gvatours/gvatours.pem\" -r ./build/* ec2-user@52.7.16.247:/var/www/html/",
-    "deploy": "ENVIRONMENT=production react-scripts build && cp .htaccess-needed-host ./build/.htaccess && rsync -rave --progress -e \"ssh -i \"~/Documents/alan/gvatours/gvatours.pem\"\" -r ./build/* ec2-user@52.7.16.247:/var/www/html/"
+    "deploy": "ENVIRONMENT=production react-scripts build && cp .htaccess-needed-host ./build/.htaccess && rsync -rave --progress -e \"ssh -i \"~/Documents/alan/gvatours/gvatours.pem\"\" -r ./build/* ec2-user@52.7.16.247:/var/www/html/",
+    "deploystage": "ENVIRONMENT=production react-scripts build && cp .htaccess-needed-host ./build/.htaccess && rsync -rave --progress -e \"ssh -i \"~/Documents/alan/gvatours/gvatours.pem\"\" -r ./build/* ec2-user@52.7.16.247:/var/www/html/stage"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -53,5 +53,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/compat-data": "7.8.0",
+    "@babel/plugin-proposal-numeric-separator": "^7.18.6",
+    "sass": "^1.77.4"
   }
 }
