--- a/front-end/package.json
+++ b/front-end/package.json
@@ -4,31 +4,31 @@
   "homepage": ".",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.9.5",
-    "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.45",
-    "@material-ui/pickers": "^3.2.10",
-    "@rpldy/upload-button": "^0.10.0",
-    "@rpldy/upload-preview": "^0.10.0",
-    "@rpldy/uploady": "^0.10.0",
-    "axios": "^0.19.2",
-    "clsx": "^1.1.0",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "@material-ui/lab": "^4.0.0-alpha.61",
+    "@material-ui/pickers": "^3.3.11",
+    "@rpldy/upload-button": "^1.7.1",
+    "@rpldy/upload-preview": "^1.7.1",
+    "@rpldy/uploady": "^1.7.1",
+    "axios": "^1.6.0",
+    "clsx": "^1.2.1",
     "conversor-numero-a-letras-es-ar": "^1.0.3",
-    "date-fns": "^2.17.0",
-    "dotenv": "^8.2.0",
-    "file-saver": "^2.0.2",
-    "html2canvas": "^1.0.0-rc.7",
-    "jspdf": "^2.3.0",
-    "material-ui": "^0.20.2",
-    "moment": "^2.29.1",
-    "node-sass": "^4.13.0",
-    "query-string": "^6.12.0",
-    "react": "^16.12.0",
-    "react-datepicker": "^3.4.1",
-    "react-dom": "^16.12.0",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
-    "recharts": "^1.8.5"
+    "date-fns": "^2.30.0",
+    "dotenv": "^16.3.1",
+    "file-saver": "^2.0.5",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
+    "moment": "^2.29.4",
+    "query-string": "^7.1.3",
+    "react": "^17.0.2",
+    "react-datepicker": "^4.21.0",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.4",
+    "react-scripts": "5.0.1",
+    "recharts": "^2.10.3",
+    "sass": "^1.69.5",
+    "whatwg-fetch": "^3.6.20"
   },
   "scripts": {
     "start": "ENVIRONMENT=development react-scripts start",
@@ -37,7 +37,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "deploys": "ENVIRONMENT=production react-scripts build && cp .htaccess-needed-host ./build/.htaccess && scp  -i \"~/Documents/alan/gvatours/gvatours.pem\" -r ./build/* ec2-user@52.7.16.247:/var/www/html/",
-    "deploy": "ENVIRONMENT=production react-scripts build && cp .htaccess-needed-host ./build/.htaccess && rsync -rave --progress -e \"ssh -i \"~/Documents/alan/gvatours/gvatours.pem\"\" -r ./build/* ec2-user@52.7.16.247:/var/www/html/"
+    "deploy": "ENVIRONMENT=production react-scripts build && cp .htaccess-needed-host ./build/.htaccess && rsync -rave --progress -e \"ssh -i \"~/Desktop/gvatours.pem\"\" -r ./build/* ec2-user@52.7.16.247:/var/www/html/"
   },
   "eslintConfig": {
     "extends": "react-app"
